# programmieruebung_4-5

./: README.md  main.py  pyproject.toml  read_data.py  read_pandas.py
Pandas_Einführung/: PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb
