[project]
name = "programmieruebung_4-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Krainer", email = "ks0376@mci4me.at"},
]
dependencies = ["streamlit>=1.45.1", "jupyter>=1.1.1", "plotly>=6.1.2", "pandas>=2.2.3", "pyproject-toml>=0.1.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
